15-OCI-Cluster-Kubernetes/05-Cluster-Ssl/03-Cluster-ingress-ssl-staging.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - www.cloudtechakademi.com
    secretName: ssl-sertifika-staging
  rules:
  - host: www.cloudtechakademi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: wordpress-servisi
            port:
              number: 80
